# opl-py

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  publish.yml
api/: Dockerfile  main.py  requirements.txt
demo/: demo_all.py  demo_analytics.py  demo_core.py  demo_init.py
docs/: ANALYTICS.md  CLI.md  DEV.md  DOCKER.md  SDK.md
plans/: PLAN.md  PUBLISHING.md
pretrained/2026-03-14-dfb517af/: model.joblib
pretrained/gradient_boosting/2026-03-14-dfb517af/: model.joblib
src/opl/: __init__.py
src/opl/analytics/: __init__.py  features.py  normative.py  trajectory.py
src/opl/analytics/scripts/: train.py
src/opl/analytics/trajectory/: __init__.py  base.py  gradient_boosting.py  quantile_gbt.py  registry.py
src/opl/core/: cli.py  client.py  db.py  download.py  enums.py  models.py
tests/: conftest.py
tests/analytics/: test_features.py  test_normative.py  test_trajectory.py
tests/core/: test_client.py  test_db.py  test_models.py
tests/fixtures/: test_data.csv
ui/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  api.ts  index.css
ui/src/components/: LifterProfile.tsx  LifterSearch.tsx  PredictionPanel.tsx  TrajectoryChart.tsx
